--- a/docs/.vitepress/vitepress/style/tailwind.css
+++ b/docs/.vitepress/vitepress/style/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --theme-primary: #708fff;
+    --theme-secondary: #8fff70;
+}
