--- a/docs/.vitepress/vitepress/style/vars.less
+++ b/docs/.vitepress/vitepress/style/vars.less
@@ -28,8 +28,8 @@
   --border-color: #ebebeb;
 
   /* Font */
-  --font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial,
-    sans-serif;
+  --font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei',
+    '微软雅黑', Arial, sans-serif;
 }
 
 // Dark theme configuration
