--- a/packages/assets/css/tailwind.css
+++ b/packages/assets/css/tailwind.css
@@ -4,6 +4,6 @@
 @tailwind utilities;
 
 :root {
-    --theme-primary: #409EFF;
-    --theme-secondary: #9815f8;
+  --theme-primary: #409eff;
+  --theme-secondary: #9815f8;
 }
