docs: 文档自定义

--- a/docs/.vitepress/vitepress/style/tailwind.css
+++ b/docs/.vitepress/vitepress/style/tailwind.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 :root {
-  --theme-primary: #708fff;
-  --theme-secondary: #8fff70;
+  --theme-primary: #ffa400;
+  --theme-secondary: #ff2d51;
 }
