--- a/docs/.vitepress/vitepress/style/vars.less
+++ b/docs/.vitepress/vitepress/style/vars.less
@@ -43,3 +43,89 @@
   /* Border */
   --border-color: #4c4d4f;
 }
+
+
+:root {
+  --vp-c-bg: #ffffff;
+
+  --vp-c-bg-elv: #ffffff;
+  --vp-c-bg-elv-up: #ffffff;
+  --vp-c-bg-elv-down: #f6f6f7;
+  --vp-c-bg-elv-mute: #f6f6f7;
+
+  --vp-c-bg-soft: #f6f6f7;
+  --vp-c-bg-soft-up: #f9f9fa;
+  --vp-c-bg-soft-down: #e3e3e5;
+  --vp-c-bg-soft-mute: #e3e3e5;
+
+  --vp-c-bg-alt: #f6f6f7;
+
+  --vp-c-border: rgba(60, 60, 67, 0.29);
+  --vp-c-divider: rgba(60, 60, 67, 0.12);
+  --vp-c-gutter: rgba(60, 60, 67, 0.12);
+
+  --vp-c-neutral: var(--vp-c-black);
+  --vp-c-neutral-inverse: var(--vp-c-white);
+
+  --vp-c-text-1: var(--vp-c-text-light-1);
+  --vp-c-text-2: var(--vp-c-text-light-2);
+  --vp-c-text-3: var(--vp-c-text-light-3);
+
+  --vp-c-text-inverse-1: var(--vp-c-text-dark-1);
+  --vp-c-text-inverse-2: var(--vp-c-text-dark-2);
+  --vp-c-text-inverse-3: var(--vp-c-text-dark-3);
+
+  --vp-c-text-code: #476582;
+
+  --vp-c-brand: #ffa400;
+  --vp-c-brand-light: #ffa400;
+  --vp-c-brand-lighter: #ffc864;
+  --vp-c-brand-dark: #ffa400;
+  --vp-c-brand-darker: #e29100;
+  --vp-c-brand-darkest: #d28700;
+
+  --vp-c-mute: #f6f6f7;
+  --vp-c-mute-light: #f9f9fc;
+  --vp-c-mute-lighter: #ffffff;
+  --vp-c-mute-dark: #e3e3e5;
+  --vp-c-mute-darker: #d7d7d9;
+}
+
+.dark {
+  --vp-c-bg: #1e1e20;
+
+  --vp-c-bg-elv: #252529;
+  --vp-c-bg-elv-up: #313136;
+  --vp-c-bg-elv-down: #1e1e20;
+  --vp-c-bg-elv-mute: #313136;
+
+  --vp-c-bg-soft: #252529;
+  --vp-c-bg-soft-up: #313136;
+  --vp-c-bg-soft-down: #1e1e20;
+  --vp-c-bg-soft-mute: #313136;
+
+  --vp-c-bg-alt: #161618;
+
+  --vp-c-border: rgba(82, 82, 89, 0.68);
+  --vp-c-divider: rgba(82, 82, 89, 0.32);
+  --vp-c-gutter: #000000;
+
+  --vp-c-neutral: var(--vp-c-white);
+  --vp-c-neutral-inverse: var(--vp-c-black);
+
+  --vp-c-text-1: var(--vp-c-text-dark-1);
+  --vp-c-text-2: var(--vp-c-text-dark-2);
+  --vp-c-text-3: var(--vp-c-text-dark-3);
+
+  --vp-c-text-inverse-1: var(--vp-c-text-light-1);
+  --vp-c-text-inverse-2: var(--vp-c-text-light-2);
+  --vp-c-text-inverse-3: var(--vp-c-text-light-3);
+
+  --vp-c-text-code: #c9def1;
+
+  --vp-c-mute: #313136;
+  --vp-c-mute-light: #3a3a3c;
+  --vp-c-mute-lighter: #505053;
+  --vp-c-mute-dark: #2c2c30;
+  --vp-c-mute-darker: #252529;
+}
