--- a/packages/components/button/button.css
+++ b/packages/components/button/button.css
@@ -11,51 +11,97 @@
 }
 
 .default {
-  @apply button-border-hover-primary border-gray-200 dark:border-gray-600 hover:text-primary hover:bg-primary/10
-  dark:disabled:text-white/50 disabled:border-gray-200 dark:disabled:border-gray-600
-  disabled:bg-inherit;
-}
-
-.default-ghost {
   @apply button-border-hover-primary border-gray-200 dark:border-gray-600 hover:text-primary hover:bg-primary/10;
 }
 
+.default-disable {
+  @apply border-gray-200 dark:border-gray-600 dark:disabled:text-white/50 text-black/50;
+}
+
+.default-ghost {
+  @apply border-gray-200 dark:border-gray-600;
+}
+
+.default-ghost-disable {
+  @apply dark:text-white/50 border-gray-200 dark:border-gray-600 text-black/50;
+}
+
 .primary {
-  @apply bg-primary text-white hover:bg-primary/80 disabled:bg-primary/40 dark:disabled:bg-primary/40 dark:disabled:text-white/50;
+  @apply bg-primary text-white hover:bg-primary/80;
+}
+
+.primary-disable {
+  @apply bg-primary/40 text-white disabled:text-primary/50 dark:disabled:text-primary/50;
 }
 
 .primary-ghost {
   @apply button-border-primary hover:bg-primary bg-primary/10 text-primary hover:text-white;
 }
 
+.primary-ghost-disable {
+  @apply disabled:border-primary/40 disabled:text-primary/50;
+}
+
 .danger {
-  @apply bg-red-500 text-white hover:bg-red-500/80 disabled:bg-red-500/40 dark:disabled:bg-red-500/40 dark:disabled:text-white/50;
+  @apply bg-red-500 text-white hover:bg-red-500/80;
+}
+
+.danger-disable {
+  @apply bg-red-500/40 text-white/50;
 }
 
 .danger-ghost {
   @apply bg-red-500/10 text-red-500 hover:text-white hover:bg-red-500/80 border-red-500 dark:border-red-500;
 }
 
+.danger-ghost-disable {
+  @apply disabled:border-red-500/40 disabled:text-red-500/50;
+}
+
 .success {
-  @apply bg-green-500 text-white hover:bg-green-500/80 disabled:bg-green-500/40 dark:disabled:bg-green-500/40 dark:disabled:text-white/50;
+  @apply bg-green-500 text-white hover:bg-green-500/80;
+}
+
+.success-disable {
+  @apply bg-green-500/40 text-white/50;
 }
 
 .success-ghost {
   @apply bg-green-500/10 text-green-500 hover:text-white hover:bg-green-500 border-green-500 dark:border-green-500;
 }
 
+.success-ghost-disable {
+  @apply disabled:border-green-500/40 disabled:text-green-500/50;
+}
+
 .info {
-  @apply bg-gray-400 text-white hover:bg-gray-400/80 disabled:bg-gray-400/40 dark:disabled:bg-gray-400/40 dark:disabled:text-white/50;
+  @apply bg-gray-400 text-white hover:bg-gray-400/80;
+}
+
+.info-disable {
+  @apply bg-gray-400/40 text-white/50;
 }
 
 .info-ghost {
   @apply bg-gray-400/10 text-gray-400 hover:text-white hover:bg-gray-400 border-gray-400 dark:border-gray-400;
 }
 
+.info-ghost-disable {
+  @apply disabled:border-gray-400/40 disabled:text-gray-400/50;
+}
+
 .warning {
-  @apply bg-orange-400 text-white hover:bg-orange-400/80 disabled:bg-orange-400/40 dark:disabled:bg-orange-400/40 dark:disabled:text-white/50;
+  @apply bg-orange-400 text-white hover:bg-orange-400/80;
+}
+
+.warning-disable {
+  @apply bg-orange-400/40 text-white/50;
 }
 
 .warning-ghost {
   @apply bg-orange-400/10 text-orange-400 hover:text-white hover:bg-orange-400 dark:border-orange-400;
+}
+
+.warning-ghost-disable {
+  @apply disabled:border-orange-400/40 disabled:text-orange-400/50;
 }
